adicionando create e read do produto jsp

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,5 +14,8 @@
 <form action="ServletReadEndereco">
     <button type="submit">Endereco</button>
 </form>
+<form action="ServletReadProduto">
+    <button type="submit">Produto</button>
+</form>
 </body>
 </html>
