add jsp notafiscal e itemNotaFiscal

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,16 +1,29 @@
 <html>
 <head>
-    <title>Title</title>
+    <title>Menu Principal</title>
 </head>
 <body>
+<h2>Menu Principal</h2>
+
 <form action="ServletReadEndereco">
-    <button type="submit">Enderecos</button>
+    <button type="submit">Endereços</button>
 </form>
+
 <form action="ServletReadEmpresa">
     <button type="submit">Empresas</button>
 </form>
+
 <form action="ServletReadProduto">
     <button type="submit">Produtos</button>
 </form>
+
+<form action="ServletReadNotaFiscalXml">
+    <button type="submit">Notas Fiscais XML</button>
+</form>
+
+<form action="ServletReadItemNotaFiscal">
+    <button type="submit">Itens Nota Fiscal</button>
+</form>
+
 </body>
 </html>
