--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,5 +30,9 @@
 <form action="ServletReadItemNotaFiscal" method="get">
     <button type="submit">Itens Nota Fiscal</button>
 </form>
+
+<form action="ServletReadFuncionario" method="get">
+    <button type="submit">Funcionario</button>
+</form>
 </body>
 </html>
