adicionando estoque e arrumando relacoes bd

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,35 +4,39 @@
     <title>Menu Principal</title>
 </head>
 <body>
-    <h2>Menu Principal</h2>
+<h2>Menu Principal</h2>
+<form action="ServletReadEndereco" method="get">
+    <button type="submit">Endereços</button>
+</form>
+<br>
 
-    <form action="ServletReadEndereco" method="get">
-        <button type="submit">Endereços</button>
-    </form>
-    <br>
+<form action="ServletReadEmpresa" method="get">
+    <button type="submit">Empresas</button>
+</form>
+<br>
 
-    <form action="ServletReadEmpresa" method="get">
-        <button type="submit">Empresas</button>
-    </form>
-    <br>
+<form action="ServletReadProduto" method="get">
+    <button type="submit">Produtos</button>
+</form>
+<br>
 
-    <form action="ServletReadProduto" method="get">
-        <button type="submit">Produtos</button>
-    </form>
-    <br>
+<form action="ServletReadNotaFiscalXml" method="get">
+    <button type="submit">Notas Fiscais XML</button>
+</form>
+<br>
 
-    <form action="ServletReadNotaFiscalXml" method="get">
-        <button type="submit">Notas Fiscais XML</button>
-    </form>
-    <br>
+<form action="ServletReadFuncionario" method="get">
+    <button type="submit">Funcionário</button>
+</form>
+<br>
 
-    <form action="ServletReadFuncionario" method="get">
-        <button type="submit">Funcionário</button>
-    </form>
-    <br>
+<form action="ServletReadAlerta" method="get">
+    <button type="submit">Alerta</button>
+</form>
+<br>
 
-    <form action="ServletReadAlerta" method="get">
-        <button type="submit">Alerta</button>
-    </form>
+<form action="ServletReadEstoque" method="get">
+    <button type="submit">Estoques</button>
+</form>
 </body>
 </html>
