landing page no projeto

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
         <a href="#contato">Contato</a>
         <a href="#nos">Sobre nós</a>
         <div>
-            <a href="index.jsp">Área restrita</a>
+            <a href="login.jsp">Área restrita</a>
             <img style="width: 10px" src="assets-landing/logo/cadeado.png">
         </div>
     </nav>
@@ -91,17 +91,20 @@
         </div>
     </section>
 
+    <hr class="divisor2">
+
+
     <section id="nos">
         <h2 class="equipe">Nossa equipe</h2>
         <figure class="equipe-imagem">
-            <img class="Meu-grupinho" src="assets-landing/grupo/temporariaEquipe.jpeg" alt="A equipe inteira da CodCoz reunida">
+            <img class="grupo" src="assets-landing/grupo/O-codcoz.jpeg" alt="A equipe inteira da CodCoz reunida">
         </figure>
     </section>
 </main>
 
 <footer id="contato" class="footer">
     <div class="footer-esquerda">
-        <img src="assets/logo/logoEscrita.png" alt="Logo CodCoz">
+        <img src="assets-landing/logo/logoEscrita.png" alt="Logo CodCoz">
         <p class="slogan">Seu estoque digno de um chefe!</p>
     </div>
     <div class="footer-direita">
