Rafael landing page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,8 +14,9 @@
         <img src="assets-landing/logo/logoEscritaAmarelo.png" alt="Logo da CodCoz">
     </div>
     <nav class="menu">
+        <a href="#historia">Historia</a>
+        <a href="#nos">Nos</a>
         <a href="#contato">Contato</a>
-        <a href="#nos">Sobre nós</a>
         <div>
             <a href="login.jsp">Área restrita</a>
             <img style="width: 10px" src="assets-landing/logo/cadeado.png">
@@ -37,11 +38,12 @@
         </div>
     </section>
 
-    <section class="sobre-codcoz">
+    <section id="sobre" class="sobre-codcoz">
         <h2 style="font-weight: 600;">Por que nasceu o CodCoz?</h2>
         <p>
-            Muitas cozinhas ainda dependem de processos manuais ou planilhas, o que resulta em erros,
-            falhas de controle e discrepâncias entre o sistema e o estoque físico.
+            Muitas cozinhas industriais ainda usam métodos manuais ou planilhas para controlar os insumos.
+            Isso pode causar erros humanos como a quebra de estoque, que é diferenças entre o que está registrado no sistema de gestão
+            e o que realmente existe na cozinha.
         </p>
     </section>
 
@@ -78,7 +80,7 @@
 
     <hr class="divisor2">
 
-    <section id="sobre" class="nossa-historia">
+    <section id="historia" class="nossa-historia">
         <div class="historia-texto">
             <h2>Nossa história</h2>
             <p>
