novo apdrao celular

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,13 +94,13 @@
         <section class="container-funcionalidades">
             <div class="container-celulares">
                 <div class="celular" id="cell1">
-                    <img width="250px" src="assets-landing/vantagens/cell1.png" alt="">
+                    <img src="assets-landing/vantagens/cell1.png" alt="">
                 </div>
                 <div class="celular" id="cell2">
-                    <img width="250px" src="assets-landing/vantagens/cell1.png" alt="">
+                    <img src="assets-landing/vantagens/cell1.png" alt="">
                 </div>
                 <div class="celular" id="cell3">
-                    <img width="250px" src="assets-landing/vantagens/cell1.png" alt="">
+                    <img src="assets-landing/vantagens/cell1.png" alt="">
                 </div>
                     
                 <article id="default">
