adicionando seta para voltar ao index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -79,7 +79,8 @@
                     <img src="assets-landing/vantagens/quarto.png" alt="Relação do cardápio com o estoque">
                     <p>Relação do cardápio com o estoque</p>
                 </article>
-        </section>
+            </section>
+            
         <section id="tecnologias">
             <p>
                 CodCoz conta com um scanner de código de barras, ou seja, basta fazer a entrada do produto com uma 
@@ -108,30 +109,27 @@
                     <p>Passe o cursor por alguma das telas para descobrir sua funcionalidade!</p>
                 </article>
                 <article id="desc1">
-                    <h1>cell1</h1>
+                    <h1>Cardápio do Estoque</h1>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia nisi molestiae unde
-                        assumenda ab. Nobis, tempora eos. Adipisci qui autem iste nihil maiores quam tenetur
-                        deleniti quos. Vitae, atque.
+                        Organize suas receitas e visualize o cardápio semanal com facilidade.
+                        Tenha controle total sobre o que está disponível em cada refeição.
                     </p>
                 </article>
                 <article id="desc2">
-                    <h1>cell2</h1>
+                    <h1>Realizar Nova Saída</h1>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia nisi molestiae unde
-                        assumenda ab. Nobis, tempora eos. Adipisci qui autem iste nihil maiores quam tenetur
-                        deleniti quos. Vitae, atque.
+                        Escaneie o código de barras e automatize a baixa de insumos.
+                        Rápido, intuitivo e sem necessidade de planilhas manuais.
                     </p>
                 </article>
                 <article id="desc3">
-                    <h1>cell3</h1>
+                    <h1>Painel do Estoquista</h1>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia nisi molestiae unde
-                        assumenda ab. Nobis, tempora eos. Adipisci qui autem iste nihil maiores quam tenetur
-                        deleniti quos. Vitae, atque.
+                        Acompanhe o desempenho do estoque em tempo real.
+                        Veja indicadores, histórico e previsões de consumo com clareza.
                     </p>
                 </article>
-        </section>
+            </section>
 
 
         <section id="historia" class="nossa-historia">
