--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,167 +11,169 @@
 
 <body>
 
-    <header>
-        <div class="logo">
-            <img src="assets-landing/logo/logoEscritaAmarelo.png" alt="Logo da CodCoz">
+<header>
+    <div class="logo">
+        <img src="assets-landing/logo/logoEscritaAmarelo.png" alt="Logo da CodCoz">
+    </div>
+    <nav class="menu">
+        <a href="#historia">História</a>
+        <a href="#nos">Sobre Nós</a>
+        <a href="#contato">Contato</a>
+        <div>
+            <a href="login.jsp">Área restrita</a>
+            <img width="10" src="assets-landing/logo/cadeado.png">
         </div>
-        <nav class="menu">
-            <a href="#historia">Historia</a>
-            <a href="#nos">Sobre Nós</a>
-            <a href="#contato">Contato</a>
-            <div>
-                <a href="login.jsp">Área restrita</a>
-                <img width="10" src="assets-landing/logo/cadeado.png">
+    </nav>
+</header>
+
+<main>
+    <section class="primeiro">
+        <div class="primeiro-text">
+            <h1>Gestão inteligente e sustentável para seu estoque</h1>
+            <div class="primeiro-buttons">
+                <a href="#sobre" class="botao1">Conheça o CodCoz</a>
+                <a href="#vantagens" class="botao2">Vantagens</a>
             </div>
-        </nav>
-    </header>
+        </div>
+        <div class="hero-image">
+            <img src="assets-landing/logo/celulares.png" alt="Aplicativo CodCoz exibido em smartphones"
+                 class="celulares">
+        </div>
+    </section>
 
-    <main>
-        <section class="primeiro">
-            <div class="primeiro-text">
-                <h1>Gestão inteligente e sustentável para seu estoque</h1>
-                <div class="primeiro-buttons">
-                    <a href="#sobre" class="botao1">Conheça o CodCoz</a>
-                    <a href="#vantagens" class="botao2">Vantagens</a>
-                </div>
+    <section id="sobre" class="sobre-codcoz">
+        <h2 style="font-weight: 600;">Por que nasceu o CodCoz?</h2>
+        <p>
+            Muitas cozinhas industriais ainda usam métodos manuais ou planilhas para controlar os insumos.
+            Isso pode causar erros humanos como a quebra de estoque, que é e diferença entre o que está registrado no
+            sistema de gestão
+            e o que realmente existe na cozinha. Por isso, CodCoz traz <a href="#tecnologias">tecnologias</a> pensadas
+            para resolver esses problemas.
+        </p>
+    </section>
+
+    <section class="mais-aproveitamento">
+        <h1>Mais aproveitamento na sua cozinha</h1>
+        <div class="cards">
+            <p>Trazendo segurança com dados reais</p>
+        </div>
+    </section>
+
+
+    <section id="vantagens" class="vantagens-codcoz">
+        <h1>Vantagens CodCoz</h1>
+        <div class="vantagens">
+            <article>
+                <img src="assets-landing/vantagens/primeiro.png" alt="Entrada de insumos automatizada">
+                <p>Entrada de insumos automatizada</p>
+            </article>
+            <article>
+                <img src="assets-landing/vantagens/segundo.png" alt="Baixa de insumos automatizada">
+                <p>Baixa de insumos automatizada</p>
+            </article>
+            <article>
+                <img src="assets-landing/vantagens/terceiro.png" alt="Relatórios gerados na hora">
+                <p>Relatórios gerados na hora</p>
+            </article>
+            <article>
+                <img src="assets-landing/vantagens/quarto.png" alt="Relação do cardápio com o estoque">
+                <p>Relação do cardápio com o estoque</p>
+            </article>
+    </section>
+
+    <section id="tecnologias">
+        <p>
+            CodCoz conta com um scanner de código de barras, ou seja, basta fazer a entrada do produto com uma
+            <b>nota fiscal</b>, fazer a baixa com scanner, e pronto! O sistema de gestão já é atualizado e os
+            relatórios gerados.
+            <br><br>
+            O sistema também conta com a funcionalidade de relação do cardápio com o estoque, ou seja, ao cadastrar o
+            cardápio semanal, o sistema já calcula a quantidade necessária de cada insumo para aquela semana,
+            facilitando o planejamento das compras e evitando desperdícios.
+        </p>
+    </section>
+    <section class="container-funcionalidades">
+        <div class="container-celulares">
+            <div class="celular" id="cell1">
+                <img src="assets-landing/vantagens/cell1.png" alt="">
             </div>
-            <div class="hero-image">
-                <img src="assets-landing/logo/celulares.png" alt="Aplicativo CodCoz exibido em smartphones"
-                    class="celulares">
+            <div class="celular" id="cell2">
+                <img src="assets-landing/vantagens/cell2.png" alt="">
             </div>
-        </section>
-
-        <section id="sobre" class="sobre-codcoz">
-            <h2 style="font-weight: 600;">Por que nasceu o CodCoz?</h2>
-            <p>
-                Muitas cozinhas industriais ainda usam métodos manuais ou planilhas para controlar os insumos.
-                Isso pode causar erros humanos como a quebra de estoque, que é diferenças entre o que está registrado no
-                sistema de gestão
-                e o que realmente existe na cozinha. Por isso, CodCoz traz <a href="#tecnologias">tecnologias</a> pensadas
-                para resolver esses problemas.
-            </p>
-        </section>
-
-        <section class="mais-aproveitamento">
-            <h1>Mais aproveitamento na sua cozinha</h1>
-            <div class="cards">
-                <p>Trazendo segurança com dados reais</p>
+            <div class="celular" id="cell3">
+                <img src="assets-landing/vantagens/cell3.png" alt="">
             </div>
-        </section>
 
-
-        <section id="vantagens" class="vantagens-codcoz">
-            <h1>Vantagens CodCoz</h1>
-            <div class="vantagens">
-                <article>
-                    <img src="assets-landing/vantagens/primeiro.png" alt="Entrada de insumos automatizada">
-                    <p>Entrada de insumos automatizada</p>
-                </article>
-                <article>
-                    <img src="assets-landing/vantagens/segundo.png" alt="Baixa de insumos automatizada">
-                    <p>Baixa de insumos automatizada</p>
-                </article>
-                <article>
-                    <img src="assets-landing/vantagens/terceiro.png" alt="Relatórios gerados na hora">
-                    <p>Relatórios gerados na hora</p>
-                </article>
-                <article>
-                    <img src="assets-landing/vantagens/quarto.png" alt="Relação do cardápio com o estoque">
-                    <p>Relação do cardápio com o estoque</p>
-                </article>
-            </section>
-            
-        <section id="tecnologias">
-            <p>
-                CodCoz conta com um scanner de código de barras, ou seja, basta fazer a entrada do produto com uma 
-                <b>nota fiscal</b>, fazer a baixa com scanner, e pronto! O sistema de gestão já é atualizado e os 
-                relatórios gerados.
-                <br><br>
-                O sistema também conta com a funcionalidade de relação do cardápio com o estoque, ou seja, ao cadastrar o
-                cardápio semanal, o sistema já calcula a quantidade necessária de cada insumo para aquela semana, 
-                facilitando o planejamento das compras e evitando desperdícios.
-            </p>
-        </section>
-        <section class="container-funcionalidades">
-            <div class="container-celulares">
-                <div class="celular" id="cell1">
-                    <img src="assets-landing/vantagens/cell1.png" alt="">
-                </div>
-                <div class="celular" id="cell2">
-                    <img src="assets-landing/vantagens/cell2.png" alt="">
-                </div>
-                <div class="celular" id="cell3">
-                    <img src="assets-landing/vantagens/cell3.png" alt="">
-                </div>
-                    
-                <article id="default">
-                    <h1>Descubra nossas Telas</h1>
-                    <p>Passe o cursor por alguma das telas para descobrir sua funcionalidade!</p>
-                </article>
-                <article id="desc1">
-                    <h1>Cardápio do Estoque</h1>
-                    <p>
-                        Organize suas receitas e visualize o cardápio semanal com facilidade.
-                        Tenha controle total sobre o que está disponível em cada refeição.
-                    </p>
-                </article>
-                <article id="desc2">
-                    <h1>Realizar Nova Saída</h1>
-                    <p>
-                        Escaneie o código de barras e automatize a baixa de insumos.
-                        Rápido, intuitivo e sem necessidade de planilhas manuais.
-                    </p>
-                </article>
-                <article id="desc3">
-                    <h1>Painel do Estoquista</h1>
-                    <p>
-                        Acompanhe o desempenho do estoque em tempo real.
-                        Veja indicadores, histórico e previsões de consumo com clareza.
-                    </p>
-                </article>
-            </section>
-
-
-        <section id="historia" class="nossa-historia">
-            <div class="historia-texto">
-                <h2>Nossa história</h2>
+            <article id="default">
+                <h1>Descubra nossas Telas</h1>
+                <p>Passe o cursor por alguma das telas para descobrir sua funcionalidade!</p>
+            </article>
+            <article id="desc1">
+                <h1>Cardápio do Estoque</h1>
                 <p>
-                    O projeto nasceu a partir de uma iniciativa dos alunos do primeiro ano da Germinare do Instituto
-                    J&F,
-                    que, ao visitarem a cozinha da instituição, identificaram desafios e necessidades do dia a dia.
-                    A partir dessa experiência, surgiu a proposta de uma solução capaz de atender não apenas à realidade
-                    da escola, mas também de ser aplicada em cozinhas industriais. Com a ideia estruturada, os alunos do
-                    segundo ano passaram a colaborar no processo, contribuindo para o desenvolvimento do aplicativo.
+                    Organize suas receitas e visualize o cardápio semanal com facilidade.
+                    Tenha controle total sobre o que está disponível em cada refeição.
                 </p>
-            </div>
-        </section>
+            </article>
+            <article id="desc2">
+                <h1>Realizar Nova Saída</h1>
+                <p>
+                    Escaneie o código de barras e automatize a baixa de insumos.
+                    Rápido, intuitivo e sem necessidade de planilhas manuais.
+                </p>
+            </article>
+            <article id="desc3">
+                <h1>Painel do Estoquista</h1>
+                <p>
+                    Acompanhe o desempenho do estoque em tempo real.
+                    Veja indicadores, histórico e previsões de consumo com clareza.
+                </p>
+            </article>
+    </section>
 
 
-
-        <section id="nos">
-            <h2 class="equipe">Nossa equipe</h2>
-            <figure class="equipe-imagem">
-                <img class="grupo" src="assets-landing/grupo/O-codcoz.jpeg" alt="A equipe inteira da CodCoz reunida">
-            </figure>
-        </section>
-    </main>
-
-    <footer id="contato" class="footer">
-        <div class="footer-esquerda">
-            <img src="assets-landing/logo/logoEscrita.png" alt="Logo CodCoz">
-            <p class="slogan">Seu estoque digno de um chefe!</p>
+    <section id="historia" class="nossa-historia">
+        <div class="historia-texto">
+            <h2>Nossa história</h2>
+            <p>
+                O projeto nasceu a partir de uma iniciativa dos alunos do primeiro ano da Germinare do Instituto
+                J&F,
+                que, ao visitarem a cozinha da instituição, identificaram desafios e necessidades do dia a dia.
+                A partir dessa experiência, surgiu a proposta de uma solução capaz de atender não apenas à realidade
+                da escola, mas também de ser aplicada em cozinhas industriais. Com a ideia estruturada, os alunos do
+                segundo ano passaram a colaborar no processo, contribuindo para o desenvolvimento do aplicativo.
+            </p>
         </div>
-        <div class="footer-direita">
-            <div class="linha-vertical"></div>
-            <div class="contatos">
-                <h3>CONTATOS</h3>
-                <p><a href="mailto:contato.codcoz@gmail.com">contato.codcoz@gmail.com</a></p>
-                <p>@codcoz</p>
-                <p class="copyright">© 2025 CodCoz. Todos os direitos reservados.</p>
-            </div>
-        </div>
-    </footer>
+    </section>
 
+
+
+    <section id="nos">
+        <h2 class="equipe">Nossa equipe</h2>
+        <figure class="equipe-imagem">
+            <img class="grupo" src="assets-landing/grupo/O-codcoz.jpeg" alt="A equipe inteira da CodCoz reunida">
+        </figure>
+    </section>
+</main>
+
+<footer id="contato" class="footer">
+    <div class="footer-esquerda">
+        <img src="assets-landing/logo/logoEscrita.png" alt="Logo CodCoz">
+        <p class="slogan">Seu estoque digno de um chefe!</p>
+    </div>
+    <div class="footer-direita">
+        <div class="linha-vertical"></div>
+        <div class="contatos">
+            <h3>CONTATOS</h3>
+            <p><a href="mailto:contato.codcoz@gmail.com">contato.codcoz@gmail.com</a></p>
+            <p>@codcoz</p>
+            <p class="copyright">© 2025 CodCoz. Todos os direitos reservados.</p>
+        </div>
+    </div>
+</footer>
+<a href="https://codcoz-web-faq.onrender.com" class="botao-circular" target="_blank">
+    <img src="assets-landing/logo/chat.png" alt="Botão" />
+</a>
 </body>
 
 </html>
